--- a/src/TP2_tests.ipynb
+++ b/src/TP2_tests.ipynb
@@ -19,6 +19,15 @@
    "outputs": [],
    "source": [
     "def compute_average_frame(video_path, max_frames=300):\n",
+    "    \"\"\"\n",
+    "    Calcula o fundo (background) de um vídeo com base na média de todos os frames de um vídeo.\n",
+    "\n",
+    "    Args:\n",
+    "        video_path (str): Diretioria do ficheiro de vídeo.\n",
+    "        max_frames (int, o): Número máximo de frames a utilizar para a média. Por defeito, 300.\n",
+    "    Returns:\n",
+    "        np.ndarray: \"Frame médio\", formatado como um array numpy de inteiros positivos de 8 bits.\n",
+    "    \"\"\"\n",
     "    cap = cv.VideoCapture(video_path)\n",
     "    count = 0\n",
     "    avg = None\n",
@@ -61,12 +70,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "id": "ebcea100",
    "metadata": {},
    "outputs": [],
    "source": [
     "def detect_cars(video_path, output_path=\"output_cars.mp4\"):\n",
+    "    \"\"\"\n",
+    "    Detecta e marca veículos num vídeo usando subtração do fundo por média de frames.\n",
+    "\n",
+    "    O algoritmo:\n",
+    "    - Constroi um fundo (background) calculando a média dos frames com compute_average_frame().\n",
+    "    - Para cada frame calcula absdiff entre frame e fundo, converte para grayscale e faz threshold.\n",
+    "    - Aplica operações morfológicas (close, open) para limpar ruído.\n",
+    "    - Encontra contornos e desenha retângulos em contornos com área >= 500.\n",
+    "    - Escreve os frames anotados num ficheiro de saída e mostra a janela \"Car Detection\".\n",
+    "    - Premir ESC (tecla 27) interrompe a execução.\n",
+    "\n",
+    "    Args:\n",
+    "        video_path (str): Caminho para o ficheiro de vídeo de entrada.\n",
+    "        output_path (str, optional): Caminho para o ficheiro de vídeo de saída (mp4). Padrão: \"output_cars.mp4\".\n",
+    "\n",
+    "    Returns:\n",
+    "        None\n",
+    "\n",
+    "    Observações:\n",
+    "    - Depende da função compute_average_frame(video_path) definida noutro lugar no notebook.\n",
+    "    - Pode ajustar o limiar (current: 30) e a área mínima (current: 500) para adaptar a sensibilidade.\n",
+    "    - Requer OpenCV (cv2) e NumPy disponíveis no ambiente do notebook.\n",
+    "    \"\"\"\n",
     "    # Build background model\n",
     "    background = compute_average_frame(video_path)\n",
     "\n",
