--- a/src/TP2_tests.ipynb
+++ b/src/TP2_tests.ipynb
@@ -18,12 +18,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def compute_average_frame(video_path, max_frames=300):\n",
+    "def avg_frame(video_path, max_frames=300):\n",
     "    \"\"\"\n",
     "    Calcula o fundo (background) de um vídeo com base na média de todos os frames de um vídeo.\n",
     "\n",
     "    Args:\n",
-    "        video_path (str): Diretioria do ficheiro de vídeo.\n",
+    "        video_path (str): Diretoria do ficheiro de vídeo.\n",
     "        max_frames (int, o): Número máximo de frames a utilizar para a média. Por defeito, 300.\n",
     "    Returns:\n",
     "        np.ndarray: \"Frame médio\", formatado como um array numpy de inteiros positivos de 8 bits.\n",
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "id": "ec180671",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
     "# Example usage:\n",
     "video_path = \"../Resources/videoDatabase/AutoEstrada.avi\"\n",
     "\n",
-    "avg_img = compute_average_frame(video_path)\n",
+    "avg_img = avg_frame(video_path)\n",
     "\n",
     "cv.imshow(\"Average Image\", avg_img)\n",
     "cv.waitKey(0)\n",
@@ -83,7 +83,7 @@
     "        video_path (str): Caminho para o ficheiro de vídeo de entrada.\n",
     "        output_path (str, optional): Caminho para o ficheiro de vídeo de saída (mp4). Padrão: \"output_cars.mp4\".\n",
     "    \"\"\"\n",
-    "    background = compute_average_frame(video_path)\n",
+    "    background = avg_frame(video_path)\n",
     "\n",
     "    cap = cv.VideoCapture(video_path)\n",
     "\n",
@@ -154,13 +154,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "id": "a081bc46",
    "metadata": {},
    "outputs": [],
    "source": [
     "def detect_cars_polygon(video_path, output_path, roi_polygon):\n",
-    "    background = compute_average_frame(video_path)\n",
+    "    \"\"\"\n",
+    "    Detecta e marca veículos dentro de uma região de interesse (ROI) poligonal num vídeo.\n",
+    "\n",
+    "    Args:\n",
+    "        video_path (str): Caminho para o ficheiro de vídeo de entrada.\n",
+    "        output_path (str): Caminho para o ficheiro de vídeo de saída (mp4).\n",
+    "        roi_polygon (np.ndarray): Array Nx2 (int32) com os vértices do polígono da ROI, ex. np.array([[x1,y1], [x2,y2], ...], dtype=np.int32).\n",
+    "    \"\"\"\n",
+    "    background = avg_frame(video_path)\n",
     "    cap = cv.VideoCapture(video_path)\n",
     "\n",
     "    w = int(cap.get(cv.CAP_PROP_FRAME_WIDTH))\n",
