--- a/src/TP2_tests.ipynb
+++ b/src/TP2_tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "ebec1c89",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "c7e16e8f",
    "metadata": {},
    "outputs": [],
@@ -53,13 +53,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "ec180671",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Example usage:\n",
-    "video_path = \"../Resources/videoDatabase/AutoEstrada.avi\"\n",
+    "video_path = \"resources/AutoEstrada.avi\"\n",
     "\n",
     "avg_img = avg_frame(video_path)\n",
     "\n",
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "ebcea100",
    "metadata": {},
    "outputs": [],
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 16,
    "id": "091df61e",
    "metadata": {},
    "outputs": [
@@ -146,7 +146,7 @@
    ],
    "source": [
     "# Example usage:\n",
-    "video_path = \"../Resources/videoDatabase/AutoEstrada.avi\"\n",
+    "video_path = \"resources/AutoEstrada.avi\"\n",
     "\n",
     "# -------- RUN THE DETECTOR --------\n",
     "detect_cars(video_path, \"cars_detected.mp4\")"
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "a081bc46",
    "metadata": {},
    "outputs": [],
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 18,
    "id": "aa9d261e",
    "metadata": {},
    "outputs": [
@@ -244,7 +244,7 @@
    ],
    "source": [
     "# Example usage:\n",
-    "video_path = \"../Resources/videoDatabase/AutoEstrada.avi\"\n",
+    "video_path = \"resources/AutoEstrada.avi\"\n",
     "roi_polygon = np.array([\n",
     "    [100, 70],   # top-left\n",
     "    [155, 70],  # top-right\n",
@@ -267,7 +267,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -281,7 +281,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
