--- a/src/TP2_tests.ipynb
+++ b/src/TP2_tests.ipynb
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "a081bc46",
    "metadata": {},
    "outputs": [],
@@ -225,7 +225,7 @@
     "    cap.release()\n",
     "    out.release()\n",
     "    cv.destroyAllWindows()\n",
-    "    print(\"Polygon ROI detection finished. Saved:\", output_path)\n"
+    "    print(\"Polygon ROI detection finished. Saved:\", output_path)"
    ]
   },
   {
