--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -19,26 +19,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "1a9256d7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "from pipeline import detect_cars"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "07d67f12",
+   "execution_count": 22,
+   "id": "e784dc23",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A processar: resources/AutoEstrada.avi\n",
+      "Resolução: 320x240, FPS: 23.97\n",
+      "Frames processados: 100\n",
+      "Processamento interrompido pelo usuário.\n",
+      "Processamento concluído. Total de frames: 136\n",
+      "Vídeo salvo em: cars_detected.mp4\n"
+     ]
+    }
+   ],
+   "source": [
+    "video_path = \"resources/AutoEstrada.avi\"\n",
+    "roi_polygon = np.array([\n",
+    "    [100, 70],   # top-left\n",
+    "    [155, 70],  # top-right\n",
+    "    [230, 240],  # bottom-right\n",
+    "    [5, 240]     # bottom-left\n",
+    "], dtype=np.int32)\n",
+    "\n",
+    "# -------- RUN THE DETECTOR --------\n",
+    "detect_cars(video_path, \"cars_detected.mp4\", roi_polygon)"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
