--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 35,
    "id": "e784dc23",
    "metadata": {},
    "outputs": [
@@ -41,8 +41,8 @@
       "A processar: resources/AutoEstrada.avi\n",
       "Resolução: 320x240, FPS: 23.97\n",
       "Frames processados: 100\n",
-      "Processamento interrompido pelo usuário.\n",
-      "Processamento concluído. Total de frames: 136\n",
+      "Frames processados: 200\n",
+      "Processamento concluído. Total de frames: 234\n",
       "Vídeo salvo em: cars_detected.mp4\n"
      ]
     }
@@ -50,13 +50,12 @@
    "source": [
     "video_path = \"resources/AutoEstrada.avi\"\n",
     "roi_polygon = np.array([\n",
-    "    [100, 70],   # top-left\n",
-    "    [155, 70],  # top-right\n",
-    "    [230, 240],  # bottom-right\n",
-    "    [5, 240]     # bottom-left\n",
+    "    [115, 50],    # Canto Superior Esquerdo\n",
+    "    [145, 50],    # Canto Superior Direito\n",
+    "    [230, 240],   # Canto Inferior Direito\n",
+    "    [5, 240]      # Canto Inferior Esquerdo\n",
     "], dtype=np.int32)\n",
     "\n",
-    "# -------- RUN THE DETECTOR --------\n",
     "detect_cars(video_path, \"cars_detected.mp4\", roi_polygon)"
    ]
   }
