--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -19,13 +19,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 82,
    "id": "1a9256d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'BackgroundExtractor' from 'lib.background' (c:\\Users\\bruno\\OneDrive\\Documentos\\GitHub\\P2_52D_51589_A51811\\src\\lib\\background.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[82], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpipeline\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Pipeline\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01margparse\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\bruno\\OneDrive\\Documentos\\GitHub\\P2_52D_51589_A51811\\src\\lib\\pipeline.py:1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mbackground\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m BackgroundExtractor\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmotion\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m MotionDetector\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtracker\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m VehicleTracker\n",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'BackgroundExtractor' from 'lib.background' (c:\\Users\\bruno\\OneDrive\\Documentos\\GitHub\\P2_52D_51589_A51811\\src\\lib\\background.py)"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from lib.pipeline import Pipeline\n",
+    "import argparse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4465fa21",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "from pipeline import detect_cars"
+    "def parse_roi(s: str) -> np.ndarray:\n",
+    "    # string like: \"x1,y1 x2,y2 x3,y3\"\n",
+    "    parts = s.strip().split()\n",
+    "    pts = []\n",
+    "    for p in parts:\n",
+    "        x,y = p.split(',')\n",
+    "        pts.append([int(x), int(y)])\n",
+    "    return np.array(pts, dtype=np.int32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5554a4aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parser = argparse.ArgumentParser()\n",
+    "    parser.add_argument('--input', required=True)\n",
+    "    parser.add_argument('--output', required=True)\n",
+    "    parser.add_argument('--roi', required=False, help='\"x1,y1 x2,y2 ...\"')\n",
+    "    parser.add_argument('--mode', choices=['median','mog2'], default='median')\n",
+    "    parser.add_argument('--scale', type=float, default=0.02, help='metros por pixel')\n",
+    "    parser.add_argument('--min_area', type=int, default=500)\n",
+    "    args = parser.parse_args()\n",
+    "\n",
+    "    logging.basicConfig(level=logging.INFO, format='%(asctime)s %(levelname)s %(message)s')\n",
+    "\n",
+    "    if args.roi:\n",
+    "        roi_poly = parse_roi(args.roi)\n",
+    "    else:\n",
+    "        roi_poly = None\n",
+    "\n",
+    "    pipe = Pipeline(input_path=args.input, output_path=args.output, roi_polygon=roi_poly,\n",
+    "                    scale_m_per_px=args.scale, min_area=args.min_area)\n",
+    "    pipe.run(mode=args.mode)"
    ]
   },
   {
