--- a/src/TP2_tests.ipynb
+++ b/src/TP2_tests.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "ebec1c89",
+   "execution_count": 5,
+   "id": "dd94973f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,253 +13,211 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "c7e16e8f",
+   "execution_count": 6,
+   "id": "a0918402",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def avg_frame(video_path, max_frames=300):\n",
-    "    \"\"\"\n",
-    "    Calcula o fundo (background) de um vídeo com base na média de todos os frames de um vídeo.\n",
-    "\n",
-    "    Args:\n",
-    "        video_path (str): Diretoria do ficheiro de vídeo.\n",
-    "        max_frames (int, o): Número máximo de frames a utilizar para a média. Por defeito, 300.\n",
-    "    Returns:\n",
-    "        np.ndarray: \"Frame médio\", formatado como um array numpy de inteiros positivos de 8 bits.\n",
-    "    \"\"\"\n",
+    "def avg_frame(video_path, max_frames=300, step=3):\n",
     "    cap = cv.VideoCapture(video_path)\n",
     "    count = 0\n",
     "    avg = None\n",
+    "    frame_index = 0\n",
     "\n",
     "    while count < max_frames:\n",
     "        ret, frame = cap.read()\n",
     "        if not ret:\n",
     "            break\n",
     "\n",
-    "        f = frame.astype(np.float32)\n",
+    "        if frame_index % step != 0:\n",
+    "            frame_index += 1\n",
+    "            continue\n",
+    "\n",
+    "        frame_index += 1\n",
+    "        frame_f = frame.astype(np.float32)\n",
+    "\n",
     "        if avg is None:\n",
-    "            avg = f\n",
+    "            avg = frame_f\n",
     "        else:\n",
-    "            avg += f\n",
+    "            avg += frame_f\n",
     "\n",
     "        count += 1\n",
     "\n",
     "    cap.release()\n",
     "\n",
-    "    avg /= count\n",
-    "    return avg.astype(np.uint8)\n"
+    "    if count == 0:\n",
+    "        raise Exception(f\"ERROR: No frames loaded from video: {video_path}\")\n",
+    "\n",
+    "    return (avg / count).astype(np.uint8)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "5ff32401",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def detect_cars(frame, background_blur, mask_roi):\n",
+    "    \"\"\"\n",
+    "    Recebe um frame e devolve bounding boxes detectados dentro da ROI.\n",
+    "    \"\"\"\n",
+    "    # pré-processamento\n",
+    "    frame_blur = cv.GaussianBlur(frame, (21, 21), 0)\n",
+    "    diff = cv.absdiff(frame_blur, background_blur)\n",
+    "    gray = cv.cvtColor(diff, cv.COLOR_BGR2GRAY)\n",
+    "\n",
+    "    masked = cv.bitwise_and(gray, mask_roi)\n",
+    "\n",
+    "    # threshold automático\n",
+    "    _, thresh = cv.threshold(masked, 0, 255, cv.THRESH_BINARY + cv.THRESH_OTSU)\n",
+    "\n",
+    "    # morfologia\n",
+    "    kernel = cv.getStructuringElement(cv.MORPH_ELLIPSE, (7, 7))\n",
+    "    cleaned = cv.morphologyEx(thresh, cv.MORPH_CLOSE, kernel, iterations=2)\n",
+    "    cleaned = cv.morphologyEx(cleaned, cv.MORPH_OPEN, kernel, iterations=1)\n",
+    "\n",
+    "    contours, _ = cv.findContours(cleaned, cv.RETR_EXTERNAL, cv.CHAIN_APPROX_SIMPLE)\n",
+    "\n",
+    "    boxes = []\n",
+    "\n",
+    "    for cnt in contours:\n",
+    "        area = cv.contourArea(cnt)\n",
+    "        if area < 800:\n",
+    "            continue\n",
+    "\n",
+    "        x, y, w, h = cv.boundingRect(cnt)\n",
+    "\n",
+    "        # filtrar sombras (objetos muito estreitos/altos)\n",
+    "        if w / float(h) < 0.3:\n",
+    "            continue\n",
+    "\n",
+    "        boxes.append((x, y, w, h))\n",
+    "\n",
+    "    return boxes\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "6923495d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def count_cars(video_path, output_path, roi_polygon, line_pt1, line_pt2):\n",
+    "    # background\n",
+    "    background = avg_frame(video_path)\n",
+    "    background_blur = cv.GaussianBlur(background, (21, 21), 0)\n",
+    "\n",
+    "    cap = cv.VideoCapture(video_path)\n",
+    "    w = int(cap.get(cv.CAP_PROP_FRAME_WIDTH))\n",
+    "    h = int(cap.get(cv.CAP_PROP_FRAME_HEIGHT))\n",
+    "    fps = cap.get(cv.CAP_PROP_FPS)\n",
+    "\n",
+    "    # máscara ROI\n",
+    "    mask_roi = np.zeros((h, w), dtype=np.uint8)\n",
+    "    cv.fillPoly(mask_roi, [roi_polygon], 255)\n",
+    "\n",
+    "    # writer\n",
+    "    out = cv.VideoWriter(output_path, cv.VideoWriter_fourcc(*\"mp4v\"), fps, (w, h))\n",
+    "\n",
+    "    # tracking simples\n",
+    "    prev_centroids = {}\n",
+    "    next_id = 0\n",
+    "\n",
+    "    while True:\n",
+    "        ret, frame = cap.read()\n",
+    "        if not ret:\n",
+    "            break\n",
+    "\n",
+    "        # DETEÇÃO\n",
+    "        boxes = detect_cars(frame, background_blur, mask_roi)\n",
+    "\n",
+    "        new_centroids = {}\n",
+    "\n",
+    "        for (x, y, w2, h2) in boxes:\n",
+    "            cx = x + w2 // 2\n",
+    "            cy = y + h2 // 2\n",
+    "\n",
+    "            # associar centroid ao ID (match simples por proximidade)\n",
+    "            assigned_id = None\n",
+    "            for obj_id, (px, py) in prev_centroids.items():\n",
+    "                if abs(cx - px) < 30 and abs(cy - py) < 40:\n",
+    "                    assigned_id = obj_id\n",
+    "                    break\n",
+    "\n",
+    "            if assigned_id is None:\n",
+    "                assigned_id = next_id\n",
+    "                next_id += 1\n",
+    "\n",
+    "            new_centroids[assigned_id] = (cx, cy)\n",
+    "\n",
+    "            # desenhar bounding box\n",
+    "            cv.rectangle(frame, (x, y), (x+w2, y+h2), (0, 255, 0), 2)\n",
+    "            cv.putText(frame, f\"ID:{assigned_id}\", (x, y-5),\n",
+    "                       cv.FONT_HERSHEY_SIMPLEX, 0.5, (0,255,0), 1)\n",
+    "\n",
+    "        prev_centroids = new_centroids\n",
+    "\n",
+    "        # desenhar a ROI\n",
+    "        cv.polylines(frame, [roi_polygon], True, (255, 0, 0), 2)\n",
+    "\n",
+    "        # desenhar linha de contagem\n",
+    "        cv.line(frame, line_pt1, line_pt2, (0, 0, 255), 2)\n",
+    "\n",
+    "        out.write(frame)\n",
+    "        cv.imshow(\"Car Counting\", frame)\n",
+    "\n",
+    "        if cv.waitKey(1) & 0xFF == 27:\n",
+    "            break\n",
+    "\n",
+    "    cap.release()\n",
+    "    out.release()\n",
+    "    cv.destroyAllWindows()\n",
+    "\n",
+    "    print(\"Done! Cars counted:\", assigned_id)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "ec180671",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Example usage:\n",
-    "video_path = \"resources/AutoEstrada.avi\"\n",
-    "\n",
-    "avg_img = avg_frame(video_path)\n",
-    "\n",
-    "cv.imshow(\"Average Image\", avg_img)\n",
-    "cv.waitKey(0)\n",
-    "cv.destroyAllWindows()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "ebcea100",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def detect_cars(video_path, output_path=\"output_cars.mp4\"):\n",
-    "    \"\"\"\n",
-    "    Detecta e marca veículos num vídeo usando subtração do fundo por média de frames.\n",
-    "\n",
-    "    Args:\n",
-    "        video_path (str): Caminho para o ficheiro de vídeo de entrada.\n",
-    "        output_path (str, optional): Caminho para o ficheiro de vídeo de saída (mp4). Padrão: \"output_cars.mp4\".\n",
-    "    \"\"\"\n",
-    "    background = avg_frame(video_path)\n",
-    "\n",
-    "    cap = cv.VideoCapture(video_path)\n",
-    "\n",
-    "    # Prepare video writer\n",
-    "    w = int(cap.get(cv.CAP_PROP_FRAME_WIDTH))\n",
-    "    h = int(cap.get(cv.CAP_PROP_FRAME_HEIGHT))\n",
-    "    fps = cap.get(cv.CAP_PROP_FPS)\n",
-    "\n",
-    "    fourcc = cv.VideoWriter_fourcc(*'mp4v')\n",
-    "    out = cv.VideoWriter(output_path, fourcc, fps, (w, h))\n",
-    "\n",
-    "    while True:\n",
-    "        ret, frame = cap.read()\n",
-    "        if not ret:\n",
-    "            break\n",
-    "\n",
-    "        diff = cv.absdiff(frame, background)\n",
-    "        gray = cv.cvtColor(diff, cv.COLOR_BGR2GRAY)\n",
-    "\n",
-    "        _, thresh = cv.threshold(gray, 30, 255, cv.THRESH_BINARY)\n",
-    "\n",
-    "        kernel = cv.getStructuringElement(cv.MORPH_ELLIPSE, (5, 5))\n",
-    "        mask = cv.morphologyEx(thresh, cv.MORPH_CLOSE, kernel, iterations=2)\n",
-    "        mask = cv.morphologyEx(mask, cv.MORPH_OPEN, kernel, iterations=2)\n",
-    "\n",
-    "        contours, _ = cv.findContours(mask, cv.RETR_EXTERNAL, cv.CHAIN_APPROX_SIMPLE)\n",
-    "\n",
-    "        for cnt in contours:\n",
-    "            if cv.contourArea(cnt) < 500:\n",
-    "                continue\n",
-    "\n",
-    "            x, y, w2, h2 = cv.boundingRect(cnt)\n",
-    "            cv.rectangle(frame, (x, y), (x + w2, y + h2), (0, 255, 0), 2)\n",
-    "\n",
-    "        out.write(frame)\n",
-    "        cv.imshow(\"Car Detection\", frame)\n",
-    "\n",
-    "        if cv.waitKey(1) & 0xFF == 27:\n",
-    "            break\n",
-    "\n",
-    "    cap.release()\n",
-    "    out.release()\n",
-    "    cv.destroyAllWindows()\n",
-    "    print(\"Done:\", output_path)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "091df61e",
+   "id": "e19618c2",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Done: cars_detected.mp4\n"
+      "Done! Cars counted: 12\n"
      ]
     }
    ],
    "source": [
-    "# Example usage:\n",
     "video_path = \"resources/AutoEstrada.avi\"\n",
     "\n",
-    "# -------- RUN THE DETECTOR --------\n",
-    "detect_cars(video_path, \"cars_detected.mp4\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a081bc46",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def detect_cars_polygon(video_path, output_path, roi_polygon):\n",
-    "    \"\"\"\n",
-    "    Detecta e marca veículos dentro de uma região de interesse (ROI) poligonal num vídeo.\n",
-    "\n",
-    "    Args:\n",
-    "        video_path (str): Caminho para o ficheiro de vídeo de entrada.\n",
-    "        output_path (str): Caminho para o ficheiro de vídeo de saída (mp4).\n",
-    "        roi_polygon (np.ndarray): Array Nx2 (int32) com os vértices do polígono da ROI, ex. np.array([[x1,y1], [x2,y2], ...], dtype=np.int32).\n",
-    "    \"\"\"\n",
-    "    background = avg_frame(video_path)\n",
-    "    cap = cv.VideoCapture(video_path)\n",
-    "\n",
-    "    w = int(cap.get(cv.CAP_PROP_FRAME_WIDTH))\n",
-    "    h = int(cap.get(cv.CAP_PROP_FRAME_HEIGHT))\n",
-    "    fps = cap.get(cv.CAP_PROP_FPS)\n",
-    "\n",
-    "    # Create polygon mask\n",
-    "    mask_roi = np.zeros((h, w), dtype=np.uint8)\n",
-    "    cv.fillPoly(mask_roi, [roi_polygon], 255)\n",
-    "\n",
-    "    out = cv.VideoWriter(output_path,\n",
-    "                         cv.VideoWriter_fourcc(*\"mp4v\"),\n",
-    "                         fps, (w, h))\n",
-    "\n",
-    "    while True:\n",
-    "        ret, frame = cap.read()\n",
-    "        if not ret:\n",
-    "            break\n",
-    "\n",
-    "        # Background subtraction\n",
-    "        diff = cv.absdiff(frame, background)\n",
-    "        gray = cv.cvtColor(diff, cv.COLOR_BGR2GRAY)\n",
-    "\n",
-    "        # Apply polygon mask\n",
-    "        masked_gray = cv.bitwise_and(gray, gray, mask=mask_roi)\n",
-    "\n",
-    "        # Threshold\n",
-    "        _, thresh = cv.threshold(masked_gray, 30, 255, cv.THRESH_BINARY)\n",
-    "\n",
-    "        # Morphology\n",
-    "        kernel = cv.getStructuringElement(cv.MORPH_ELLIPSE, (5, 5))\n",
-    "        cleaned = cv.morphologyEx(thresh, cv.MORPH_CLOSE, kernel, iterations=2)\n",
-    "        cleaned = cv.morphologyEx(cleaned, cv.MORPH_OPEN, kernel, iterations=2)\n",
-    "\n",
-    "        # Find contours\n",
-    "        contours, _ = cv.findContours(cleaned, cv.RETR_EXTERNAL, cv.CHAIN_APPROX_SIMPLE)\n",
-    "\n",
-    "        for cnt in contours:\n",
-    "            if cv.contourArea(cnt) < 500:\n",
-    "                continue\n",
-    "\n",
-    "            x, y, w2, h2 = cv.boundingRect(cnt)\n",
-    "            cv.rectangle(frame, (x, y), (x+w2, y+h2), (0, 255, 0), 2)\n",
-    "\n",
-    "        # Draw polygon overlay\n",
-    "        cv.polylines(frame, [roi_polygon], True, (255, 0, 0), 2)\n",
-    "\n",
-    "        out.write(frame)\n",
-    "        cv.imshow(\"Car Detection\", frame)\n",
-    "\n",
-    "        if cv.waitKey(1) & 0xFF == 27:\n",
-    "            break\n",
-    "\n",
-    "    cap.release()\n",
-    "    out.release()\n",
-    "    cv.destroyAllWindows()\n",
-    "    print(\"Polygon ROI detection finished. Saved:\", output_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "aa9d261e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Polygon ROI detection finished. Saved: cars_detected.mp4\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Example usage:\n",
-    "video_path = \"resources/AutoEstrada.avi\"\n",
     "roi_polygon = np.array([\n",
-    "    [100, 70],   # top-left\n",
-    "    [155, 70],  # top-right\n",
-    "    [230, 240],  # bottom-right\n",
-    "    [5, 240]     # bottom-left\n",
+    "    [100, 70],\n",
+    "    [155, 70],\n",
+    "    [230, 240],\n",
+    "    [5, 240]\n",
     "], dtype=np.int32)\n",
     "\n",
-    "# -------- RUN THE DETECTOR --------\n",
-    "detect_cars_polygon(video_path, \"cars_detected.mp4\", roi_polygon)"
+    "line_pt1 = (0, 180)   # ponto 1 linha\n",
+    "line_pt2 = (300, 180) # ponto 2 linha\n",
+    "\n",
+    "count_cars(\n",
+    "    video_path,\n",
+    "    \"cars_counted.mp4\",\n",
+    "    roi_polygon,\n",
+    "    line_pt1,\n",
+    "    line_pt2\n",
+    ")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b22031d",
+   "id": "8dc07c2a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -267,7 +225,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -281,7 +239,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
