--- a/src/TP2_tests.ipynb
+++ b/src/TP2_tests.ipynb
@@ -99,12 +99,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "6923495d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def count_cars(video_path, output_path, roi_polygon, line_pt1, line_pt2):\n",
+    "def count_cars(video_path, output_path, roi_polygon):\n",
     "    # background\n",
     "    background = avg_frame(video_path)\n",
     "    background_blur = cv.GaussianBlur(background, (21, 21), 0)\n",
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "e19618c2",
    "metadata": {},
    "outputs": [
@@ -199,16 +199,7 @@
     "    [5, 240]\n",
     "], dtype=np.int32)\n",
     "\n",
-    "line_pt1 = (0, 180)   # ponto 1 linha\n",
-    "line_pt2 = (300, 180) # ponto 2 linha\n",
-    "\n",
-    "count_cars(\n",
-    "    video_path,\n",
-    "    \"cars_counted.mp4\",\n",
-    "    roi_polygon,\n",
-    "    line_pt1,\n",
-    "    line_pt2\n",
-    ")\n"
+    "count_cars(video_path, \"cars_counted.mp4\", roi_polygon)\n"
    ]
   },
   {
