--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -19,32 +19,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 85,
    "id": "1a9256d7",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'BackgroundExtractor' from 'lib.background' (c:\\Users\\bruno\\OneDrive\\Documentos\\GitHub\\P2_52D_51589_A51811\\src\\lib\\background.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[82], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpipeline\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Pipeline\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01margparse\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Users\\bruno\\OneDrive\\Documentos\\GitHub\\P2_52D_51589_A51811\\src\\lib\\pipeline.py:1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mbackground\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m BackgroundExtractor\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmotion\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m MotionDetector\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtracker\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m VehicleTracker\n",
-      "\u001b[1;31mImportError\u001b[0m: cannot import name 'BackgroundExtractor' from 'lib.background' (c:\\Users\\bruno\\OneDrive\\Documentos\\GitHub\\P2_52D_51589_A51811\\src\\lib\\background.py)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from lib.pipeline import Pipeline\n",
-    "import argparse"
+    "from lib.pipeline import Pipeline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 88,
    "id": "e784dc23",
    "metadata": {},
    "outputs": [
@@ -52,17 +38,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A processar: resources/AutoEstrada.avi\n",
-      "Resolução: 320x240, FPS: 23.97\n",
-      "Frames processados: 100\n",
-      "Frames processados: 200\n",
-      "Processamento concluído. Total de frames: 234\n",
-      "Vídeo salvo em: cars_detected.mp4\n"
+      "Construindo background...\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "MotionDetector.detect() takes 2 positional arguments but 3 were given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[88], line 16\u001b[0m\n\u001b[0;32m      1\u001b[0m roi_polygon \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([\n\u001b[0;32m      2\u001b[0m     [\u001b[38;5;241m95\u001b[39m, \u001b[38;5;241m85\u001b[39m],    \u001b[38;5;66;03m# Canto Superior Esquerdo\u001b[39;00m\n\u001b[0;32m      3\u001b[0m     [\u001b[38;5;241m160\u001b[39m, \u001b[38;5;241m85\u001b[39m],    \u001b[38;5;66;03m# Canto Superior Direito\u001b[39;00m\n\u001b[0;32m      4\u001b[0m     [\u001b[38;5;241m225\u001b[39m, \u001b[38;5;241m240\u001b[39m],   \u001b[38;5;66;03m# Canto Inferior Direito\u001b[39;00m\n\u001b[0;32m      5\u001b[0m     [\u001b[38;5;241m5\u001b[39m, \u001b[38;5;241m240\u001b[39m]      \u001b[38;5;66;03m# Canto Inferior Esquerdo\u001b[39;00m\n\u001b[0;32m      6\u001b[0m ], dtype\u001b[38;5;241m=\u001b[39mnp\u001b[38;5;241m.\u001b[39mint32)\n\u001b[0;32m      8\u001b[0m pipeline \u001b[38;5;241m=\u001b[39m Pipeline(\n\u001b[0;32m      9\u001b[0m     input_path\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mresources/AutoEstrada.avi\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m     10\u001b[0m     output_path\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcars_detected.mp4\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     13\u001b[0m     min_area\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m500\u001b[39m\n\u001b[0;32m     14\u001b[0m )\n\u001b[1;32m---> 16\u001b[0m \u001b[43mpipeline\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mc:\\Users\\bruno\\OneDrive\\Documentos\\GitHub\\P2_52D_51589_A51811\\src\\lib\\pipeline.py:105\u001b[0m, in \u001b[0;36mPipeline.run\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    102\u001b[0m     cropped \u001b[38;5;241m=\u001b[39m frame\n\u001b[0;32m    103\u001b[0m     roi_mask \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m--> 105\u001b[0m detections, binary \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdetector\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdetect\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcropped\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mroi_mask\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    107\u001b[0m \u001b[38;5;66;03m# convert detections coords back to full frame\u001b[39;00m\n\u001b[0;32m    108\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m roi_bbox \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
+      "\u001b[1;31mTypeError\u001b[0m: MotionDetector.detect() takes 2 positional arguments but 3 were given"
      ]
     }
    ],
    "source": [
-    "video_path = \"resources/AutoEstrada.avi\"\n",
     "roi_polygon = np.array([\n",
     "    [95, 85],    # Canto Superior Esquerdo\n",
     "    [160, 85],    # Canto Superior Direito\n",
@@ -70,7 +62,15 @@
     "    [5, 240]      # Canto Inferior Esquerdo\n",
     "], dtype=np.int32)\n",
     "\n",
-    "detect_cars(video_path, \"cars_detected.mp4\", roi_polygon)"
+    "pipeline = Pipeline(\n",
+    "    input_path=\"resources/AutoEstrada.avi\",\n",
+    "    output_path=\"cars_detected.mp4\",\n",
+    "    roi_polygon=roi_polygon,\n",
+    "    m_per_px=0.02,\n",
+    "    min_area=500\n",
+    ")\n",
+    "\n",
+    "pipeline.run()"
    ]
   }
  ],
