--- a/src/TP2_tests.ipynb
+++ b/src/TP2_tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "dd94973f",
    "metadata": {},
    "outputs": [],
@@ -13,13 +13,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "a0918402",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def avg_frame(video_path, max_frames=300, step=3):\n",
+    "def background(video_path, max_frames=300, step=3):\n",
+    "    \"\"\"\n",
+    "    Calcula o background como média de até `max_frames` frames amostrados a cada `step` frames.\n",
+    "\n",
+    "    Parâmetros:\n",
+    "    - video_path (str): caminho do vídeo.\n",
+    "    - max_frames (int): número máximo de frames a acumular.\n",
+    "    - step (int): amostragem (ex.: step=3 pega 1 a cada 3 frames).\n",
+    "\n",
+    "    Retorno:\n",
+    "    - numpy.ndarray: imagem do background (dtype uint8, formato BGR).\n",
+    "\n",
+    "    Lança:\n",
+    "    - IOError se o vídeo não puder ser aberto.\n",
+    "    - ValueError se nenhum frame válido for lido.\n",
+    "    \"\"\"\n",
     "    cap = cv.VideoCapture(video_path)\n",
+    "    if not cap.isOpened():\n",
+    "        raise IOError(f\"Cannot open video: {video_path}\")\n",
+    "\n",
     "    count = 0\n",
     "    avg = None\n",
     "    frame_index = 0\n",
@@ -34,7 +52,7 @@
     "            continue\n",
     "\n",
     "        frame_index += 1\n",
-    "        frame_f = frame.astype(np.float32)\n",
+    "        frame_f = frame.astype(np.float64)\n",
     "\n",
     "        if avg is None:\n",
     "            avg = frame_f\n",
@@ -46,14 +64,14 @@
     "    cap.release()\n",
     "\n",
     "    if count == 0:\n",
-    "        raise Exception(f\"ERROR: No frames loaded from video: {video_path}\")\n",
+    "        raise ValueError(\"No frames were read from the video to compute background.\")\n",
     "\n",
-    "    return (avg / count).astype(np.uint8)\n"
+    "    return (avg / count).astype(np.uint8)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "id": "5ff32401",
    "metadata": {},
    "outputs": [],
@@ -99,14 +117,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "6923495d",
    "metadata": {},
    "outputs": [],
    "source": [
     "def count_cars(video_path, output_path, roi_polygon):\n",
     "    # background\n",
-    "    background = avg_frame(video_path)\n",
+    "    background = background(video_path)\n",
     "    background_blur = cv.GaussianBlur(background, (21, 21), 0)\n",
     "\n",
     "    cap = cv.VideoCapture(video_path)\n",
@@ -177,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "id": "e19618c2",
    "metadata": {},
    "outputs": [
@@ -201,14 +219,6 @@
     "\n",
     "count_cars(video_path, \"cars_counted.mp4\", roi_polygon)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8dc07c2a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
